helm/client/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: system-tester
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
